[package]
name = "Auff"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tui-input = "0.10"
